--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BGSI Macro UI</title>
+  <title>Epic's GAG Macro UI</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -810,17 +810,6 @@
     <div id="Event" class="tab">  
       <div class="rewards-grid">
 
-<div class="reward-box">
-  <div class="reward-header">
-    <img src="../../images/Event/T-Rex.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>DNA Machine</span>
-  </div>
-  <div class="reward-options">
-    <label><input type="checkbox" id="DinoEvent">Claim</label>
-    <label><input type="checkbox" id="dnaMaxed">24m cooldown</label>
-  </div>
-</div>
-
 
 <div class="reward-box">
   <div class="reward-header">
@@ -836,76 +825,117 @@
 
 
   <div class="rewards-grid">
-
-    <div class="reward-box">
-      <div class="reward-header">
-        <span>Craft Event Gears?</span>
-      </div>
-      <div class="reward-options">
-        <label><input type="checkbox" id="EventCrafting">Enable</label>
-      </div>
-    </div>
-
-
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/MutationSprayAmber.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Mutation Spray Amber</span>
+    <img src="../../images/Event/ExoticZenSeedPack.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zen Seed Pack</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="MutationSprayAmber">Claim</label>
+    <label><input type="checkbox" id="ZenSeedPack">Claim</label>
   </div>
 </div>
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/AncientSeedPack1.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Ancient Seed Pack</span>
+    <img src="../../images/Event/Zenegg.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zen Egg</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="AncientSeedPack">Claim</label>
+    <label><input type="checkbox" id="ZenEgg">Claim</label>
   </div>
 </div>
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/DinoCrate.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Dino Crate</span>
+    <img src="../../images/Event/hotsping.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Hot Spring</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="DinoCrate">Claim</label>
+    <label><input type="checkbox" id="HotSpring">Claim</label>
   </div>
 </div>
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/ArchaelogistCrate.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Archaelogist Crate</span>
+    <img src="../../images/Event/ZenSand.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zen Sand</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="ArchaelogistCrate">Claim</label>
+    <label><input type="checkbox" id="ZenSand">Claim</label>
   </div>
 </div>
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/Dinosauregg.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Dinosaur Egg</span>
+    <img src="../../images/Event/ZenflareCrop.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zenflare</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="DinosaurEgg">Claim</label>
+    <label><input type="checkbox" id="ZenflareSeed">Claim</label>
   </div>
 </div>
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/PrimalEgg.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
-    <span>Primal Egg</span>
+    <img src="../../images/Event/Zencrate.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zen Crate</span>
   </div>
   <div class="reward-options">
-    <label><input type="radio" name="EventCrafting" id="PrimalEgg">Claim</label>
+    <label><input type="checkbox" id="ZenCrate">Claim</label>
   </div>
 </div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/SoftSunshineProduce.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Soft Sunshine</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="SoftSunshineSeed">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/Koi.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Koi</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="Koi">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/Gznen.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Zen Gnome Crate</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="ZenGnomeCrate">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/SpikedMangoProduce.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Spiked Mango</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="SpikedMangoSeed">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/TranquilPetMutationShard.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Pet Shard Tranquil</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="PetShardTranquil">Claim</label>
+  </div>
+</div>
+
+    
 
 
   </div>
@@ -919,10 +949,10 @@
     <div class="footer">
       <button onclick="ahk.ButtonClick.Func('Start')">Start (F1)</button>
       <button onclick="ahk.ButtonClick.Func('Stop')">Stop (F2)</button>
-      <button onclick="onSaveClick(this)">Save All</button>
+      <button onclick="onSaveClick(this)" class="saveButton">Save All</button>
     </div>
   </div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
