--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -847,7 +847,7 @@
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/hotsping.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <img src="../../images/Event/HotSpring.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
     <span>Hot Spring</span>
   </div>
   <div class="reward-options">
@@ -857,11 +857,21 @@
 
 <div class="reward-box">
   <div class="reward-header">
-    <img src="../../images/Event/ZenSand.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <img src="../../images/Event/ZenSand.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
     <span>Zen Sand</span>
   </div>
   <div class="reward-options">
     <label><input type="checkbox" id="ZenSand">Claim</label>
+  </div>
+</div>
+
+<div class="reward-box">
+  <div class="reward-header">
+    <img src="../../images/Event/TranquilRadar.png" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+    <span>Tranquil Radar</span>
+  </div>
+  <div class="reward-options">
+    <label><input type="checkbox" id="TranquilRadar">Claim</label>
   </div>
 </div>
 
