--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -154,6 +154,17 @@
           
         </div>
 
+        <div class="reward-box">
+          <div class="reward-header">
+            <img src="../../images/Events/ZenChanneller.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+            <span>Channeller</span>
+          </div>
+          <div class="reward-options">
+            <label><input type="checkbox" id="Channeller">Claim</label>
+          </div>
+          
+        </div>
+
       </div>
 
 
