--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -186,6 +186,17 @@
 
         <div class="reward-box">
           <div class="reward-header">
+            <img src="../../images/Events/Cosmetics.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
+            <span>Cosmetics</span>
+          </div>
+          <div class="reward-options">
+            <label><input type="checkbox" id="Cosmetics">Claim</label>
+          </div>
+          
+        </div>
+
+        <div class="reward-box">
+          <div class="reward-header">
             <img src="../../images/Events/EventIslandCooking.webp" style="width: 32.5px; height: 32.5px; margin-right: 3px; vertical-align: middle;">
             <span>Cooking Event</span>
           </div>
