--- a/scripts/Gui/index.html
+++ b/scripts/Gui/index.html
@@ -230,7 +230,7 @@
       </div>
 
 
-  <div class="rewards-grid" id="EventsGrid" >
+  <div class="rewards-grid" id="EventsGrid" style="display: none;">
       <div class="reward-box" style="font-weight: 500;">
         <div class="reward-options">
           <label><input type="checkbox" id="Events">Enable Events</label>
